<resources>
    <string name="app_name">Mon kine de poche</string>
    <string name="mon_kine_de_poche">MON KINE DE POCHE</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="notification">Notification</string>

    <!-- BOTTOM MENU -->
    <string name="theory">Theory</string>
    <string name="exercises">Exercises</string>
    <string name="comp_exercise">Computer exercises</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>

    <!--COMPUTER EXERCISE FRAGMENT-->
    <string name="icon_left">Icon left</string>
    <string name="icon_right">icon_right</string>
    <string name="exercises_for_computer_users">Exercises for computer users</string>
    <string name="timer">Timer</string>
    <string name="pause">pause</string>
    <string name="repeat">Repeat</string>
    <string name="start_btn">Start</string>
    <string name="done">DONE</string>

    <!-- HOME FRAGMENT -->
    <string name="welcome">Welcome !</string>
    <string name="current_program">CURRENT PROGRAM</string>

    <!--SETTING FRAGMENT -->
    <string name="daily_reminder">Daily reminder</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="user_name">User name</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>

    <!--EXERCISE FRAGMENT-->
    <string name="trophy">Trophy</string>
    <string name="trophy_text">God job!  You did all your exercises today!</string>

    <!--STATISTICS FRAGMENT-->
    <string name="description_statistics">The graph shows you the progress for the last 5 days, measured in percentage of completed program.</string>

    <!--MAIN ACTIVITY-->
    <string name="channel_name">notify</string>
    <string name="channel_description">notification</string>
    <string name="you_need_to_log_in_first">You need to log in first</string>
    <string name="log_in">Log in</string>
    <string name="notification_message_body">Time to do your exercises!</string>
    <string name="exercise_where_ever_you_are">Exercise where ever you are!</string>
    <string name="today_progress_drawer">Today progress:</string>

    <!--THEORY FRAGMENT-->
    <string name="why">Why?</string>
    <string name="how">How?</string>
    <string name="user_exists">Please choose another username</string>
    <string name="enter_new_user_name">Please enter your new username</string>
    <string name="why_text">Prolonged use of computer or activities with similar position such as driving often give rise to musculoskeletal symptoms. Headache and back pain are the most common symptoms. The back can easily support the weight of your head and neck when your posture is tall and erect, but if your head leans forward in a 45 degree angle, your neck has to work like a lever lifting a heavy object.  Muscles need movement, contraction and relaxation in order to be free from tension and well vascularized.</string>
    <string name="how_text">Take breaks every hour and do the exercises to release tensions and give oxygen to the muscles</string>
</resources>
